force-app/main/default/objects/email2CaseDeduper__c/email2CaseDeduper__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>configuration for  deduping ONLY add one  record</description>
    <label>Email to Case Deduper</label>
</CustomObject>