force-app/main/default/objects/email2CaseDeduper__c/fields/Deduplication_Active__c.field-meta.xml
<CustomField>
    <fullName>Deduplication_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deduplication Active</label>
    <type>Checkbox</type>
</CustomField>