force-app/main/default/objects/email2CaseDeduper__c/fields/messageHeaderTofind__c.field-meta.xml
<CustomField>
    <fullName>messageHeaderTofind__c</fullName>
    <description>The messages header that you email servie inserts when it redirects or forwards a message</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The messages header that you email servie inserts when it redirects or forwards a message. fore example MS Outlook  uses  :- x-ms-exchange-parent-message-id:
Google uses :- Message-Id:    ie it forwards a messages it does not give it a new ID but still declare this header here</inlineHelpText>
    <label>Message header to find</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>