force-app/main/default/objects/email2CaseDeduper__c/fields/PeDelete__c.field-meta.xml
<CustomField>
    <fullName>PeDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected then use a platform event to delete else as scheduled calls will delete</inlineHelpText>
    <label>Delete via platform event</label>
    <type>Checkbox</type>
</CustomField>