force-app/main/default/objects/email2CaseDeduper__c/fields/queueApiNameDeleteMe__c.field-meta.xml
<CustomField>
    <fullName>queueApiNameDeleteMe__c</fullName>
    <description>The Api name of the queue to be used to send all cases that need deleting because they are duplicates</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Queue API name for deletes</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>