force-app/main/default/objects/email2CaseDeduper__c/fields/QueueNameInbound__c.field-meta.xml
<CustomField>
    <fullName>QueueNameInbound__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Queue API name for inbound emails</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>